<resources>
    <string name="app_name">HomeNet</string>
    <string name="message_title_string">Message Title</string>
    <string name="message_description_string">Enter Message</string>
    <string name="facebook_app_id">174137489749832</string>
    <string name="enter_reply_string">Enter Reply</string>
    <string name="title_hint">Announcement Title</string>
    <string name="description_hint">Announcement Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_login_string">Log In to Continue</string>
    <string name="homenet_string">HomeNET</string>
    <string name="subtitle_string">The Next Generation of Social Networking</string>
    <string name="username_hint">Username</string>
    <string name="login_button_string">Login</string>
    <string name="register_string">Register</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="info_title_string">Its Fun, Free and Easy to Join!</string>
    <string name="subtext_string">Join the next generation of social networking! Grow your network, connect with other networks, and more! Why join?</string>
    <string name="define_network_string">You Define Your Network</string>
    <string name="define_network_desc">Create a House and get your friends to join it! See content amongst your \"housemates\". The more, the merrier!</string>
    <string name="you_boss_string">You Are The Boss!</string>
    <string name="boss_string">As the house owner, you are in control over what is on your network! No more waiting for the \"big guys\" to regulate content!</string>
    <string name="exciting_features_heading">Use Many Exciting Features!</string>
    <string name="features_string">Make announcements, video calls, personal and group messages, and muh, much more!</string>
    <string name="find_out_more">Find Out More</string>
    <string name="password_hint">Password</string>
    <string name="name_string">Name</string>
    <string name="surname_string">Surname</string>
    <string name="email_string">E-Mail</string>
    <string name="username_string">Username</string>
    <string name="date_of_birth_string">DOB</string>
    <string name="dob_button">Date Of Birth</string>
    <string name="select_country">Select Country</string>
    <string name="gender_string">Select Gender</string>
    <string name="social_media_options">Social Network Options</string>
    <string name="facebook_string">Login with Facebook</string>
    <string name="twitter_string">Login With Twitter</string>
    <string name="preferences_string">Application Preferences</string>
    <string name="homenet_link">https://homenet.net.za/api/</string>
    <string name="create_account_string">We hope you have using our product!</string>
    <string name="why_use_homenet">Why Signup For HomeNET?</string>
    <string name="bullet_one_string">Fun, Free, and Easy to Use!</string>
    <string name="bullet_two_string">You are in control! The power is under your fingertips</string>
    <string name="bullet_three_string">Expect many, exciting, fresh features</string>
    <string name="bullet_four_string">Everyone is welcome</string>
    <string name="homenet_features">Quick Features Overview</string>
    <string name="quick_features_string">Here are some of our exciting features! If you want more, sign-up and join the fun!</string>
    <string name="social_media_signup">Other Social Media Accounts?</string>
    <string name="social_media_Signup_text">You are free to signup using your Facebook or Twitter Account. At this point, we only take basic details about you to complete the signup process. If you are not happy, you can update your profile after signup.</string>
    <string name="no_receipt_string">No Receipts!</string>
    <string name="no_receipt_text">HomeNET does not allow the creation of receipts (screenshots).</string>
    <string name="stay_connected_string">Stay Connected!</string>
    <string name="world_string">Create feed updates, make calls, send messages, and more!</string>
    <string name="no_houses_string">You do not have any houses, or connections to houses. Why not connect?</string>
    <string name="add_home_string">Create House</string>
    <string name="send_house_message_string">Send Message</string>
    <string name="create_organization_String">Create Organization</string>
    <string name="help_string">Get Help</string>
    <string name="house_name">Name</string>
    <string name="description_string">Description</string>
    <string name="location_string">Location</string>
    <string name="otp_string">One Time Pin</string>
    <string name="house_id_string">House ID</string>
    <string-array name="tones_string">
        <item>Tone 1</item>
        <item>Tone 2</item>
        <item>Tone 3</item>
    </string-array>
    <string name="homenet_client_string">bab9baac6fac05ac083c5f42ec25d76d</string>
    <string name="google_speech_key">AIzaSyDBQ8F-J-mAN2CU2irCE4qMet_rUKQAxlU</string>
    <string name="maps_key">AIzaSyDOk5Dkajg167oJN-ECEcXbhE00EfFBiz4</string>
    <string name="house_help_string">Enter the name of your new house. When users wish to search for your house, they will search by name</string>
    <string name="create_house">Start your network by creating a house</string>
    <string name="add_members">Add and regulate members of your house</string>
    <string name="calls_string">See what house members are talking about</string>
    <string name="voice_calls">Send broadcast messages, make video calls</string>
    <string name="create_house_string">Create Your House</string>
    <string name="create_house_intro_string">Start by creating your house - this will be the start of your network!</string>
    <string name="define_house_string">Create House</string>
    <string name="create_organization_string">Create Your Organization</string>
    <string name="create_organization_intro">Your business can reach various audiences with HomeNET. Get started now!</string>
    <string name="get_started_string">Get Started</string>
    <string name="find_houses_string">Connect to a House</string>
    <string name="connect_to_house_string">Stay in touch with friends and family by connecting an existing house!</string>
    <string name="continue_to_app">Continue to HomeNET</string>
    <string name="continue_to_homenet_string">Start connecting with friends, families and organizations!</string>
    <string name="continue_string">Continue</string>
    <string name="image_string">Select House Image</string>
    <string name="select_image_string">Select Image</string>
    <string name="organization_name_string">Organization Name</string>
    <string name="organization_description_string">Organization Description</string>
    <string name="select_photo_string">Select Photo</string>
    <string name="select_category_string">Select Category</string>
    <string name="search_houses_string">Search Houses, People, Location</string>
    <string name="search_string">Search</string>
    <string name="about_application_string">HomeNET is an Android based social networking app, built by Okuhle Ngada, in the 2017 year. The application would not have been possible with the listed technologies:</string>
    <string name="graphics_string">Graphics used in this application were downloaded from FlatIcon</string>
    <string name="settings_string">Settings</string>
    <string name="about_application">About Application</string>
    <string name="reset_password_string">To reset your password, please provide us with your email address and your date of birth (YYYY/MM/DD format)</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password FAQ</string>
    <string name="reset_instructions">To reset your password, provide us with a valid email address and your date of birth. If both details check out, we will email you your new password</string>
    <string name="stuck">Still Stuck?</string>
    <string name="contact_support">Feel free to send an email to the developer at okuhle.ngada@koeksworld.com</string>
    <string name="house_name_description">This will be the name of your house. Pick an interesting name for your network!</string>
    <string name="house_description_description">Give your house a brief description for others to read.</string>
    <string name="remove_marker_button">Remove Marker</string>
    <string name="intro_dummy_string">Your house has a total of 8 members. Manage house settings here.</string>
    <string name="manage_users_string">Manage Users</string>
    <string name="manage_posts_string">Manage Content</string>
    <string name="edit_house_string">Edit House</string>
    <string name="mail_string">Messages</string>
    <string name="sample_name_string">Name Surname</string>
    <string name="sample_email_string">example.mail@example.com</string>
    <string name="sample_country_string">South Africa</string>
    <string name="privacy_string">My house should not visible (Users wishing to join must know your house ID and OTP)</string>
    <string name="sample_post_title_string">Post Flagged For {Category}</string>
    <string name="sample_flagged_post_string">This post contains some form of profanity and it is offensive to several members in the house. Please look at it and get back to me.</string>
    <string name="sample_announcement_title_string">Some Announcement</string>
    <string name="sample_announcement_string">This is a sample announcement. Typically, some introduction text relating to the announcement is placed here.</string>
    <string name="user_settings_string">User Settings</string>
    <string name="remember_Credentials_string">Remember Login Credentials</string>
    <string name="remember_credentials_description_string">Select this option if you want to be remembered on this device.</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="tone1_string">Tone 1</string>
    <string name="tone_selection_string">Select Your Desired Notification Tone</string>
    <string name="audio_settings_string">Select your desired notification tone</string>
    <string name="social_media_string">Social Media Settings</string>
    <string name="post_facebook_string">Post Content to Facebook</string>
    <string name="post_twitter_string">Post Content to Twitter</string>
    <string name="account_settings">Account Settings</string>
    <string name="delete_Account_option">Delete Your Account</string>
    <string name="deactivate_Account_option">Deactivate Your Account</string>
    <string name="logout_option">Log out</string>
    <string name="view_profile_string">View Profile</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="home_manager_string">Home Manager</string>
    <string name="announcements_string">Announcements</string>
    <string name="upload_photo_string">No Photo Selected</string>
    <string name="post_title_string">Say it out loud</string>
    <string name="select_house">Select House</string>
    <string name="post_to_facebook_string">Share this post on Facebook</string>
    <string name="post_to_twitter_string">Share this post on Twitter</string>
    <string name="add_location_string">Add Location information to this post</string>
    <string name="house_disclaimer_string">NOTE: Only the house Administrator has the option of modifying details to the house.</string>
    <string name="house_description_string">Description</string>
    <string name="date_created_string">Date Created</string>
    <string name="house_information_string">Basic House Details</string>
    <string name="house_owner_string">Owner</string>
    <string name="house_metrics_string">Latest House Metrics</string>
    <string name="total_house_users_string">Total Members</string>
    <string name="total_banned_users_string">Total Banned Members</string>
    <string name="leave_house">Leave House</string>
</resources>