<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
<PreferenceCategory
    android:title="@string/user_settings_string"
    >
    <CheckBoxPreference
        android:title="@string/remember_Credentials_string"
        android:key= "RememberCredentialsOption"
        android:text= "@string/remember_credentials_description_string"
        android:defaultValue="false"/>
</PreferenceCategory>

    <PreferenceCategory
        android:title="@string/social_media_string"
        >
        <CheckBoxPreference
            android:key = "FacebookPostOption"
            android:title="@string/post_facebook_string"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key = "TwitterPostOption"
            android:title="@string/post_twitter_string"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/account_settings"
        >
        <Preference
            android:key="DeleteAccountOption"
            android:title="@string/delete_Account_option"/>
        <Preference
            android:key="DeactivateAccountOption"
            android:title="@string/deactivate_Account_option"/>
        <Preference
            android:key="LogoutAccountOption"
            android:title="@string/logout_option"/>
</PreferenceCategory>
</PreferenceScreen>