<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.LoginInformationFragment"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/info_title_string"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/subtext_string"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:text="@string/define_network_string"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:text="@string/define_network_desc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:text="@string/you_boss_string"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:text="@string/boss_string"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:text="@string/exciting_features_heading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:text="@string/features_string"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id = "@+id/FindOutMoreButton"
                    style="?android:attr/buttonStyleSmall"
                    android:textAllCaps="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"
                    android:text="@string/find_out_more"
                    android:padding="15sp"
                    />
            </FrameLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
