<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.MyHousesFragment"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_house"
        android:id = "@+id/MyHouseSelectHouseSpinner"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/house_disclaimer_string"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:text="@string/house_information_string"/>
    <TableRow
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/house_name"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id = "@+id/MyHouseHouseNameTextView"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/house_description_string"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id = "@+id/MyHouseHouseDescriptionTextView"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/date_created_string"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id = "@+id/MyHouseHouseDateCreatedTextView"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/house_owner_string"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id = "@+id/MyHouseHouseOwnerTextView"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:text="@string/house_metrics_string"/>
    <TableRow
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/total_house_users_string"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id = "@+id/MyHouseHouseTotalMembersTextView"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/total_banned_users_string"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id = "@+id/MyHouseHouseTotalBannedMembersTextView"
            android:layout_height="wrap_content"/>
    </TableRow>
    <com.github.mikephil.charting.charts.BarChart
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:id = "@+id/MyHouseHouseMetricsChart"></com.github.mikephil.charting.charts.BarChart>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/leave_house"/>
</LinearLayout>
